# OTUS_HW8

./: .gitignore  CMakeLists.txt  a.cpp  boost_directory_traversal.h  crc32_hash.cpp  crc32_hash.h  directory_traversal.h  file_comparison.cpp  file_comparison.h  file_reader.h  fstream_file_reader.h  hash.h  main.cpp  md5_hash.cpp  md5_hash.h  scan_depth.h  searcher.cpp  searcher.h  settings.cpp  settings.h  test_main.cpp  test_options.cpp  test_search.cpp
.github/workflows/: cmake-single-platform.yml
